--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div id="total_box_text">总价:￥</div><div id="showtotal" class="showtotal"></div>
         <div id="discount">折扣:</div><div id="showdiscount" class="showtotal"></div>
         <div id="pocket">应付:￥</div><div id="showpocket"  class="showtotal"></div>
-        <div id="paidamount">已付:￥</div><div id="showpaid" class="showtotal"></div>
+        <div id="paidamount">已付:￥0</div><div id="showpaid" class="showtotal"></div>
       </div>
       <div id="method_id">
         <div id="paynow_method">
@@ -230,13 +230,5 @@
 <script src = "scripts/C-E-language.js"></script>
 <script src = "scripts/sockjs.min.js"></script>
 <script src = "scripts/page_element.js"></script>
-
-<script src="scripts/message.js"></script>
-
-<script type="text/javascript">
-
-</script>
-
 <script src = "scripts/stomp.min.js"></script>
 <script src = "scripts/scanertran.js"></script>
-<script src = "scripts/jQuery_nocash.js"></script>
